Fixed bug containers collapsing on each other on smaller screen sizes

--- a/client/src/screens/style/About.css
+++ b/client/src/screens/style/About.css
@@ -8,7 +8,6 @@
 
 #about #container {
   width: 70%;
-
   display: flex;
   align-items: center;
   gap: 5em;
@@ -67,7 +66,7 @@
 
 @media (min-width: 992px) {
   #about {
-    height: 100vh;
+    min-height: 100vh;
   }
 }
 
