--- a/client/src/screens/style/Home.css
+++ b/client/src/screens/style/Home.css
@@ -6,6 +6,7 @@
 }
 
 #home .container {
+  width: 80%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -63,13 +64,13 @@
     height: 100vh;
   }
   #home .container {
-    margin: 20% auto;
+    margin: 6em auto;
     flex-direction: column;
     gap: 3em;
-    padding: 3em;
   }
   #home .container > * {
     width: 100%;
+    height: 50%;
   }
 
   #home .home-right {
